--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/van-vliet/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/van-vliet/logo192.png"/>
-  <link rel="manifest" href="/van-vliet/manifest.json"/><title>J. van Vliet</title><script defer="defer" src="/van-vliet/static/js/main.dca0791c.js"></script>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <link rel="icon" href="/van-vliet/favicon.ico"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta name="theme-color" content="#000000"/>
+  <meta name="description" content="Web site created using create-react-app"/>
+  <link rel="apple-touch-icon" href="/van-vliet/logo192.pn"/>
+  <link rel="manifest" href="/van-vliet/manifest.json"/>
+  <title>DriversFlovers</title>
+
   <script>
-  const password = prompt("Write password:");
-  if (password !== "12345") {
-    document.body.innerHTML = "<h1>Password incorrect!!</h1>";
-  }
-</script>
-  <link href="/van-vliet/static/css/main.362830a7.css" rel="stylesheet"></head><body><script type="text/javascript">!function(e,t,c,n,r,a,s){e[r]=e[r]||function(){(e[r].a=e[r].a||[]).push(arguments)},e[r].l=1*new Date;for(var i=0;i<document.scripts.length;i++)if(document.scripts[i].src===n)return;a=t.createElement(c),s=t.getElementsByTagName(c)[0],a.async=1,a.src=n,s.parentNode.insertBefore(a,s)}(window,document,"script","https://mc.yandex.ru/metrika/tag.js","ym"),ym(95345298,"init",{clickmap:!0,trackLinks:!0,accurateTrackBounce:!0})</script><noscript><div><img src="https://mc.yandex.ru/watch/95345298" style="position:absolute;left:-9999px" alt=""/></div></noscript><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+    const password = prompt("Write password:");
+    if (password !== "12345") {
+      document.write("<h1 style='text-align:center; margin-top:20%'>Password incorrect!!</h1>");
+      throw new Error("Wrong password — stopping page load.");
+    }
+  </script>
+
+  <!-- only load styles and scripts *after* password is correct -->
+  <link href="/van-vliet/static/css/main.362830a7.css" rel="stylesheet">
+  <script defer src="/van-vliet/static/js/main.dca0791c.js"></script>
+</head>
+<body>
+  <!-- Yandex.Metrika -->
+  <script type="text/javascript">
+    !function(e,t,c,n,r,a,s){
+      e[r]=e[r]||function(){(e[r].a=e[r].a||[]).push(arguments)};
+      e[r].l=1*new Date;
+      for(var i=0;i<document.scripts.length;i++)
+        if(document.scripts[i].src===n) return;
+      a=t.createElement(c),s=t.getElementsByTagName(c)[0];
+      a.async=1;a.src=n;s.parentNode.insertBefore(a,s)
+    }(window,document,"script","https://mc.yandex.ru/metrika/tag.js","ym");
+    ym(95345298,"init",{clickmap:!0,trackLinks:!0,accurateTrackBounce:!0});
+  </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/95345298" style="position:absolute;left:-9999px" alt=""/></div>
+  </noscript>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+</html>
