--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 
   <script>
     let password = prompt("Write password:");
-    if (password !== "12345") {
+    while (password !== "12345") {
       password = prompt("Write password:");
+      if(password == "12345")return;
       document.write("<h1 style='text-align:center; margin-top:20%'>Password incorrect!!</h1>");
       throw new Error("Wrong password — stopping page load.");
+      
     }
   </script>
 
